--- a/src/app/modules/jobs/marketing/marketing.component.ng.scss
+++ b/src/app/modules/jobs/marketing/marketing.component.ng.scss
@@ -143,7 +143,7 @@
         gap: 10px;
 
         @include mobile-only {
-          padding: 10px 0;
+          padding: 0 0 20px 0;
           width: 90%;
         }
       }
