group invite notification template

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -126,6 +126,12 @@
       <ng-template ngSwitchCase="group_queue_approve">
         <m-icon iconId="people"></m-icon>
       </ng-template>
+      <ng-template ngSwitchCase="group_queue_reject">
+        <m-icon iconId="people"></m-icon>
+      </ng-template>
+      <ng-template ngSwitchCase="group_invite">
+        <m-icon iconId="people"></m-icon>
+      </ng-template>
       <ng-template ngSwitchCase="token_rewards_summary">
         <m-icon iconId="account_balance"></m-icon>
       </ng-template>
