Fix CSS slightly

--- a/src/app/modules/admin/verify/verify.component.scss
+++ b/src/app/modules/admin/verify/verify.component.scss
@@ -1,6 +1,6 @@
 .m-admin--verify-requests {
   .m-admin--verify-requests-info {
-    padding: 16px;
+    padding: 16px 32px;
     ul,
     li {
       margin: 0;
