Clean up careers page. Remove dynamic listing. Link to lever.co

--- a/src/app/modules/jobs/marketing/marketing.component.html
+++ b/src/app/modules/jobs/marketing/marketing.component.html
@@ -48,68 +48,11 @@
       </h2>
 
       <div class="m-jobs__group">
-        <h2 class="m-jobs__category" i18n="@@JOBS__CATEGORY">Engineering</h2>
-
-        <div class="m-jobs__job">
-          <div class="m-jobs__job--description">
-            <h3>Lead Full-Stack Developer</h3>
-            <span>Remote</span>
-          </div>
-
-          <div class="m-jobs__job--actions">
-            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
-              >More Info</m-button
-            >
-            <m-button
-              color="blue"
-              size="xsmall"
-              (onAction)="gotoLink('https://domain.com')"
-              >Apply</m-button
-            >
-          </div>
-        </div>
-
-        <div class="m-jobs__job">
-          <div class="m-jobs__job--description">
-            <h3>Full-Stack Developer</h3>
-            <span>Remote</span>
-          </div>
-
-          <div class="m-jobs__job--actions">
-            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
-              >More Info</m-button
-            >
-            <m-button
-              color="blue"
-              size="xsmall"
-              (onAction)="gotoLink('https://domain.com')"
-              >Apply</m-button
-            >
-          </div>
-        </div>
-      </div>
-
-      <div class="m-jobs__group">
-        <h2 class="m-jobs__category" i18n="@@JOBS__CATEGORY">Support</h2>
-
-        <div class="m-jobs__job">
-          <div class="m-jobs__job--description">
-            <h3>Site Admin</h3>
-            <span>Remote</span>
-          </div>
-
-          <div class="m-jobs__job--actions">
-            <m-button size="xsmall" (onAction)="gotoLink('https://domain.com')"
-              >More Info</m-button
-            >
-            <m-button
-              color="blue"
-              size="xsmall"
-              (onAction)="gotoLink('https://domain.com')"
-              >Apply</m-button
-            >
-          </div>
-        </div>
+        <m-button
+          color="blue"
+          (onAction)="gotoLink('https://jobs.lever.co/minds/')"
+          >View current vacancies</m-button
+        >
       </div>
     </div>
   </div>
