Add in counter for reports queue

--- a/src/app/modules/report/juryduty/session/list.component.html
+++ b/src/app/modules/report/juryduty/session/list.component.html
@@ -1,3 +1,4 @@
+<h6 class="m-juryDutySession__totalCount">Total: {{ count }}</h6>
 <ul class="m-juryDutySession__list">
   <li
     *ngFor="let report of reports$ | async; let i = index"
