--- a/src/app/modules/report/juryduty/session/list.component.scss
+++ b/src/app/modules/report/juryduty/session/list.component.scss
@@ -1,3 +1,11 @@
+.m-juryDutySession__totalCount {
+  margin-top: 0;
+
+  @include m-theme() {
+    color: themed($m-textColor--secondary);
+  }
+}
+
 .m-juryDutySession__list {
   list-style: none;
   margin: 0;
