--- a/src/app/modules/report/juryduty/session/session.component.scss
+++ b/src/app/modules/report/juryduty/session/session.component.scss
@@ -19,7 +19,7 @@
 
   h4 {
     margin: 0;
-    margin-bottom: 32px;
+    margin-bottom: 0;
     font-size: 16px;
     letter-spacing: 2px;
     text-transform: uppercase;
