Change careers links

--- a/src/app/modules/marketing/footer.component.html
+++ b/src/app/modules/marketing/footer.component.html
@@ -38,7 +38,11 @@
           </li>
 
           <li>
-            <a routerLink="/jobs" i18n="@@COMMON_FOOTER__CAREERS">
+            <a
+              href="https://jobs.lever.co/minds"
+              i18n="@@COMMON_FOOTER__CAREERS"
+              target="_blank"
+            >
               Careers
             </a>
           </li>
@@ -242,11 +246,6 @@
               i18n="@@COMMON_FOOTER__STATUS"
             >
               Status
-            </a>
-          </li>
-          <li>
-            <a routerLink="/jobs" i18n="@@COMMON_FOOTER__JOBS">
-              Jobs
             </a>
           </li>
         </ul>
