--- a/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
+++ b/src/app/modules/newsfeed/activity/minimal-metrics/minimal-metrics.component.html
@@ -11,20 +11,12 @@
   <ng-container *ngIf="entity.time_created && (views$ | async)">
     ·
   </ng-container>
-  <a [href]="canonicalUrl" target="_blank"
-    ><span
-      *ngIf="!isScheduled()"
+  <a *ngIf="!isScheduled()" [href]="canonicalUrl" target="_blank">
+    <m-relativeTimeSpan
       class="m-activityMinimalMetrics__timestamp"
-      [title]="entity.time_created * 1000 | date: 'medium'"
-    >
-      <ng-container *ngIf="recentlyCreated">{{
-        entity.time_created * 1000 | friendlydatediff
-      }}</ng-container>
-      <ng-container *ngIf="!recentlyCreated">{{
-        formattedCreateDate
-      }}</ng-container>
-    </span></a
-  >
+      [entity]="entity"
+    ></m-relativeTimeSpan>
+  </a>
   <div
     *ngIf="isScheduled()"
     class="m-activityMinimalMetrics__timestamp--scheduled"
