--- a/src/app/modules/composer/components/popup/attachment-error/attachment-error.component.html
+++ b/src/app/modules/composer/components/popup/attachment-error/attachment-error.component.html
@@ -34,7 +34,7 @@
 <span class="m-attachmentError__seeMoreSpan"
   >See
   <a
-    href="https://www.minds.com/help/question/dc52a015-270f-44cf-bf97-acdeadbae0da"
+    href="https://support.minds.com/hc/en-us/articles/4402686683284-Various-File-Metrics"
     target="_blank"
     >more information</a
   >
