Make interactions panel entries open in a new tab #2569

--- a/src/app/modules/admin/interactions/interactions.component.scss
+++ b/src/app/modules/admin/interactions/interactions.component.scss
@@ -107,6 +107,10 @@ m-admin--interactions--table {
       width: 50%;
     }
 
+    .m-admin--interactions__channelLink {
+      text-decoration: none;
+    }
+
     .m-admin--interactions--avatar {
       border-radius: 100%;
       width: 20px;
