--- a/src/app/modules/newsfeed/suggestions/suggestions.component.html
+++ b/src/app/modules/newsfeed/suggestions/suggestions.component.html
@@ -1,5 +1,8 @@
 <m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
-<m-sidebarWidget *ngIf="entities.length" [title]="'More from ' + headerName">
+<m-sidebarWidget
+  *ngIf="entities.length && !inProgress"
+  [title]="'More from ' + headerName"
+>
   <div class="m-sidebarWidget__body">
     <div
       class="m-newsfeedActivitySuggestion__item"
