--- a/src/app/modules/legacy/components/buttons/buttons.scss
+++ b/src/app/modules/legacy/components/buttons/buttons.scss
@@ -16,7 +16,7 @@ minds-button-user-dropdown,
     }
 
     &.material-icons {
-      padding: $minds-padding / 2;
+      padding: $minds-padding * 0.5;
       font-size: 24px;
     }
   }
