--- a/src/app/modules/forms/register/register.ng.scss
+++ b/src/app/modules/forms/register/register.ng.scss
@@ -17,7 +17,7 @@
     // width: 100%;
     margin-right: 20px;
     m-formInput__checkbox {
-      margin-bottom: $minds-margin / 2;
+      margin-bottom: $minds-margin * 0.5;
       font-size: 11px;
 
       a {
