--- a/src/app/modules/helpdesk/questions/questions.component.scss
+++ b/src/app/modules/helpdesk/questions/questions.component.scss
@@ -146,7 +146,7 @@ m-helpdesk--questions {
     }
 
     .m-helpdesk--search-autocomplete--result {
-      padding: $minds-padding / 2;
+      padding: $minds-padding * 0.5;
       cursor: pointer;
       display: flex;
       justify-content: space-between;
