--- a/src/app/modules/notifications/toaster.component.scss
+++ b/src/app/modules/notifications/toaster.component.scss
@@ -6,7 +6,7 @@ m-notifications--toaster {
   display: block;
   .m-notifications--toaster {
     position: fixed;
-    top: 64px + ($minds-padding / 2);
+    top: 64px + ($minds-padding * 0.5);
     right: $minds-padding * 2;
     width: 350px;
     max-width: 100vw;
