--- a/src/stylesheets/fonts.scss
+++ b/src/stylesheets/fonts.scss
@@ -65,20 +65,21 @@
       format('woff');
   unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
 }
+// ojm don't have this file
 /* latin-ext */
-@font-face {
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: local('Roboto Light'), local('Roboto-Light'),
-    url('<%= APP_CDN %>assets/fonts/roboto/light-latin-ext.woff2')
-      format('woff2');
-  src: local('Roboto Light'), local('Roboto-Light'),
-    url('<%= APP_CDN %>assets/fonts/roboto/light-latin-ext.woff') format('woff');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
-    U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
+// @font-face {
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: 300;
+//   font-display: swap;
+//   src: local('Roboto Light'), local('Roboto-Light'),
+//     url('<%= APP_CDN %>assets/fonts/roboto/light-latin-ext.woff2')
+//       format('woff2');
+//   src: local('Roboto Light'), local('Roboto-Light'),
+//     url('<%= APP_CDN %>assets/fonts/roboto/light-latin-ext.woff') format('woff');
+//   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB,
+//     U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+// }
 /* latin */
 @font-face {
   font-family: 'Roboto';
