Discovery home experiment #4903

--- a/src/app/modules/discovery/discovery.component.html
+++ b/src/app/modules/discovery/discovery.component.html
@@ -6,6 +6,7 @@
   >
     <m-discovery__plusUpgrade *ngIf="isPlusPage"></m-discovery__plusUpgrade>
     <router-outlet></router-outlet>
+    <ng-content></ng-content>
 
     <!-- We place an additional disclaimer here for popover -->
     <m-discovery__disclaimer
