--- a/src/app/modules/discovery/tabs/tabs.component.html
+++ b/src/app/modules/discovery/tabs/tabs.component.html
@@ -3,7 +3,9 @@
     <div class="m-tabs__tab">
       <a
         routerLink="/discovery/overview"
-        [class.m-tabs__tab--selected]="isLinkActive('/discovery/overview')"
+        [class.m-tabs__tab--selected]="
+          isLinkActive('/discovery/overview') || isLinkActive('/')
+        "
         [queryParams]="{ reload: false }"
         data-cy="discovery-tab-link-overview"
         i18n="@@DISCOVERY_TAGS__JUST_FOR_YOU"
